jcmd VM.cds dynamic_dump should not regenerate holder classes

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 19
    • Affects Version/s: 18
    • Component/s: hotspot
    • b08

      https://github.com/openjdk/jdk/blob/ca2efb73f59112d9be2ec29db405deb4c58dd435/src/hotspot/share/cds/metaspaceShared.cpp#L645

      void MetaspaceShared::link_shared_classes(TRAPS) {
        LambdaFormInvokers::regenerate_holder_classes(CHECK); << here

      This causes new holder classes to be stored into the dictionary of the boot class loader. Since the VM will continue to execute after "VM.cds dynamic_dump" has finished, the existence of these classes may have unexpected results.

            Assignee:
            Yumin Qi
            Reporter:
            Ioi Lam
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: