8277101: jcmd VM.cds dynamic_dump should not regenerate holder classes